--- a/_modules/thetis/solver.html
+++ b/_modules/thetis/solver.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>thetis.solver &#8212; Thetis 0+untagged.863.gb20c529 documentation</title>
+    <title>thetis.solver &#8212; Thetis 0.0.5+764.g4dac05e documentation</title>
     
     <link rel="stylesheet" href="../../_static/thetis.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../',
-        VERSION:     '0+untagged.863.gb20c529',
+        VERSION:     '0.0.5+764.g4dac05e',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -51,7 +51,7 @@
         <li class="page_item"><a href="../../funding.html" title="Our financial supporters">Funding</a></li>
         <li class="page_item"><a href="../../contact.html" title="Getting in touch">Contact</a></li>
         <li class="page_item"><a href="https://github.com/thetisproject/thetis" title="Thetis source on GitHub">GitHub</a></li>
-        <li class="page_item"><a href="https://travis-ci.org/thetisproject/thetis" title="Thetis on Travis">Travis</a></li>
+        <li class="page_item"><a href="https://jenkins.ese.ic.ac.uk:1080/blue/organizations/jenkins/thetisproject%2Fthetis/activity" title="Thetis build status">Jenkins</a></li>
       </ul>
     </div><!-- .menu -->
   </div><!-- #access -->
@@ -248,7 +248,7 @@
         <span class="k">return</span> <span class="n">factor</span></div>
 
 <div class="viewcode-block" id="FlowSolver.compute_dt_2d"><a class="viewcode-back" href="../../thetis.html#thetis.solver.FlowSolver.compute_dt_2d">[docs]</a>    <span class="k">def</span> <span class="nf">compute_dt_2d</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">u_scale</span><span class="p">):</span>
-        <span class="sd">r&quot;&quot;&quot;</span>
+        <span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Computes maximum explicit time step from CFL condition.</span>
 
 <span class="sd">        .. math :: \Delta t = \frac{\Delta x}{U}</span>
@@ -280,7 +280,7 @@
         <span class="k">return</span> <span class="n">dt</span></div>
 
 <div class="viewcode-block" id="FlowSolver.compute_dt_h_advection"><a class="viewcode-back" href="../../thetis.html#thetis.solver.FlowSolver.compute_dt_h_advection">[docs]</a>    <span class="k">def</span> <span class="nf">compute_dt_h_advection</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">u_scale</span><span class="p">):</span>
-        <span class="sd">r&quot;&quot;&quot;</span>
+        <span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Computes maximum explicit time step for horizontal advection</span>
 
 <span class="sd">        .. math :: \Delta t = \frac{\Delta x}{U_{scale}}</span>
@@ -302,7 +302,7 @@
         <span class="k">return</span> <span class="n">dt</span></div>
 
 <div class="viewcode-block" id="FlowSolver.compute_dt_v_advection"><a class="viewcode-back" href="../../thetis.html#thetis.solver.FlowSolver.compute_dt_v_advection">[docs]</a>    <span class="k">def</span> <span class="nf">compute_dt_v_advection</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">w_scale</span><span class="p">):</span>
-        <span class="sd">r&quot;&quot;&quot;</span>
+        <span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Computes maximum explicit time step for vertical advection</span>
 
 <span class="sd">        .. math :: \Delta t = \frac{\Delta z}{W_{scale}}</span>
@@ -324,7 +324,7 @@
         <span class="k">return</span> <span class="n">dt</span></div>
 
 <div class="viewcode-block" id="FlowSolver.compute_dt_diffusion"><a class="viewcode-back" href="../../thetis.html#thetis.solver.FlowSolver.compute_dt_diffusion">[docs]</a>    <span class="k">def</span> <span class="nf">compute_dt_diffusion</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">nu_scale</span><span class="p">):</span>
-        <span class="sd">r&quot;&quot;&quot;</span>
+        <span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Computes maximum explicit time step for horizontal diffusion.</span>
 
 <span class="sd">        .. math :: \Delta t = \alpha \frac{(\Delta x)^2}{\nu_{scale}}</span>
