--- a/_modules/thetis/callback.html
+++ b/_modules/thetis/callback.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>thetis.callback &#8212; Thetis 0+untagged.863.gb20c529 documentation</title>
+    <title>thetis.callback &#8212; Thetis 0.0.5+764.g4dac05e documentation</title>
     
     <link rel="stylesheet" href="../../_static/thetis.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../',
-        VERSION:     '0+untagged.863.gb20c529',
+        VERSION:     '0.0.5+764.g4dac05e',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -51,7 +51,7 @@
         <li class="page_item"><a href="../../funding.html" title="Our financial supporters">Funding</a></li>
         <li class="page_item"><a href="../../contact.html" title="Getting in touch">Contact</a></li>
         <li class="page_item"><a href="https://github.com/thetisproject/thetis" title="Thetis source on GitHub">GitHub</a></li>
-        <li class="page_item"><a href="https://travis-ci.org/thetisproject/thetis" title="Thetis on Travis">Travis</a></li>
+        <li class="page_item"><a href="https://jenkins.ese.ic.ac.uk:1080/blue/organizations/jenkins/thetisproject%2Fthetis/activity" title="Thetis build status">Jenkins</a></li>
       </ul>
     </div><!-- .menu -->
   </div><!-- #access -->
@@ -102,7 +102,7 @@
 
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
-        <span class="nb">super</span><span class="p">(</span><span class="n">CallbackManager</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="n">__init__</span><span class="p">(</span><span class="n">OrderedDict</span><span class="p">)</span>
+        <span class="nb">super</span><span class="p">(</span><span class="n">CallbackManager</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="n">OrderedDict</span><span class="p">)</span>
 
 <div class="viewcode-block" id="CallbackManager.add"><a class="viewcode-back" href="../../thetis.html#thetis.callback.CallbackManager.add">[docs]</a>    <span class="k">def</span> <span class="nf">add</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">callback</span><span class="p">,</span> <span class="n">mode</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
@@ -267,7 +267,7 @@
 
 <div class="viewcode-block" id="DiagnosticCallback.evaluate"><a class="viewcode-back" href="../../thetis.html#thetis.callback.DiagnosticCallback.evaluate">[docs]</a>    <span class="k">def</span> <span class="nf">evaluate</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Evaluates callback and pushes values to log and hdf file (if enabled)&quot;&quot;&quot;</span>
-        <span class="n">values</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">__call__</span><span class="p">()</span>
+        <span class="n">values</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="fm">__call__</span><span class="p">()</span>
         <span class="n">time</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">solver_obj</span><span class="o">.</span><span class="n">simulation_time</span>
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">append_to_log</span><span class="p">:</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">push_to_log</span><span class="p">(</span><span class="n">time</span><span class="p">,</span> <span class="n">values</span><span class="p">)</span>
@@ -294,7 +294,7 @@
 <span class="sd">        :kwarg bool append_to_log: If True, callback output messages will be printed</span>
 <span class="sd">            in log</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="nb">super</span><span class="p">(</span><span class="n">ScalarConservationCallback</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="n">__init__</span><span class="p">(</span><span class="n">solver_obj</span><span class="p">,</span>
+        <span class="nb">super</span><span class="p">(</span><span class="n">ScalarConservationCallback</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="n">solver_obj</span><span class="p">,</span>
                                                          <span class="n">outputdir</span><span class="p">,</span>
                                                          <span class="n">export_to_hdf5</span><span class="p">,</span>
                                                          <span class="n">append_to_log</span><span class="p">)</span>
@@ -330,7 +330,7 @@
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">def</span> <span class="nf">vol3d</span><span class="p">():</span>
             <span class="k">return</span> <span class="n">comp_volume_3d</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">solver_obj</span><span class="o">.</span><span class="n">mesh</span><span class="p">)</span>
-        <span class="nb">super</span><span class="p">(</span><span class="n">VolumeConservation3DCallback</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="n">__init__</span><span class="p">(</span><span class="n">vol3d</span><span class="p">,</span>
+        <span class="nb">super</span><span class="p">(</span><span class="n">VolumeConservation3DCallback</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="n">vol3d</span><span class="p">,</span>
                                                            <span class="n">solver_obj</span><span class="p">,</span>
                                                            <span class="n">outputdir</span><span class="p">,</span>
                                                            <span class="n">export_to_hdf5</span><span class="p">,</span>
@@ -355,7 +355,7 @@
         <span class="k">def</span> <span class="nf">vol2d</span><span class="p">():</span>
             <span class="k">return</span> <span class="n">comp_volume_2d</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">solver_obj</span><span class="o">.</span><span class="n">fields</span><span class="o">.</span><span class="n">elev_2d</span><span class="p">,</span>
                                   <span class="bp">self</span><span class="o">.</span><span class="n">solver_obj</span><span class="o">.</span><span class="n">fields</span><span class="o">.</span><span class="n">bathymetry_2d</span><span class="p">)</span>
-        <span class="nb">super</span><span class="p">(</span><span class="n">VolumeConservation2DCallback</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="n">__init__</span><span class="p">(</span><span class="n">vol2d</span><span class="p">,</span>
+        <span class="nb">super</span><span class="p">(</span><span class="n">VolumeConservation2DCallback</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="n">vol2d</span><span class="p">,</span>
                                                            <span class="n">solver_obj</span><span class="p">,</span>
                                                            <span class="n">outputdir</span><span class="p">,</span>
                                                            <span class="n">export_to_hdf5</span><span class="p">,</span>
@@ -382,7 +382,7 @@
 
         <span class="k">def</span> <span class="nf">mass</span><span class="p">():</span>
             <span class="k">return</span> <span class="n">comp_tracer_mass_3d</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">solver_obj</span><span class="o">.</span><span class="n">fields</span><span class="p">[</span><span class="n">tracer_name</span><span class="p">])</span>
-        <span class="nb">super</span><span class="p">(</span><span class="n">TracerMassConservationCallback</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="n">__init__</span><span class="p">(</span><span class="n">mass</span><span class="p">,</span>
+        <span class="nb">super</span><span class="p">(</span><span class="n">TracerMassConservationCallback</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="n">mass</span><span class="p">,</span>
                                                              <span class="n">solver_obj</span><span class="p">,</span>
                                                              <span class="n">outputdir</span><span class="p">,</span>
                                                              <span class="n">export_to_hdf5</span><span class="p">,</span>
@@ -406,7 +406,7 @@
 <span class="sd">        :kwarg bool append_to_log: If True, callback output messages will be printed</span>
 <span class="sd">            in log</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="nb">super</span><span class="p">(</span><span class="n">MinMaxConservationCallback</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="n">__init__</span><span class="p">(</span><span class="n">solver_obj</span><span class="p">,</span>
+        <span class="nb">super</span><span class="p">(</span><span class="n">MinMaxConservationCallback</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="n">solver_obj</span><span class="p">,</span>
                                                          <span class="n">outputdir</span><span class="p">,</span>
                                                          <span class="n">export_to_hdf5</span><span class="p">,</span>
                                                          <span class="n">append_to_log</span><span class="p">)</span>
@@ -450,7 +450,7 @@
             <span class="n">tracer_min</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">solver_obj</span><span class="o">.</span><span class="n">comm</span><span class="o">.</span><span class="n">allreduce</span><span class="p">(</span><span class="n">tracer_min</span><span class="p">,</span> <span class="n">op</span><span class="o">=</span><span class="n">MPI</span><span class="o">.</span><span class="n">MIN</span><span class="p">)</span>
             <span class="n">tracer_max</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">solver_obj</span><span class="o">.</span><span class="n">comm</span><span class="o">.</span><span class="n">allreduce</span><span class="p">(</span><span class="n">tracer_max</span><span class="p">,</span> <span class="n">op</span><span class="o">=</span><span class="n">MPI</span><span class="o">.</span><span class="n">MAX</span><span class="p">)</span>
             <span class="k">return</span> <span class="n">tracer_min</span><span class="p">,</span> <span class="n">tracer_max</span>
-        <span class="nb">super</span><span class="p">(</span><span class="n">TracerOvershootCallBack</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="n">__init__</span><span class="p">(</span><span class="n">minmax</span><span class="p">,</span>
+        <span class="nb">super</span><span class="p">(</span><span class="n">TracerOvershootCallBack</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="n">minmax</span><span class="p">,</span>
                                                       <span class="n">solver_obj</span><span class="p">,</span>
                                                       <span class="n">outputdir</span><span class="p">,</span>
                                                       <span class="n">export_to_hdf5</span><span class="p">,</span>
