--- a/_modules/thetis/options.html
+++ b/_modules/thetis/options.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>thetis.options &#8212; Thetis 0+untagged.863.gb20c529 documentation</title>
+    <title>thetis.options &#8212; Thetis 0.0.5+764.g4dac05e documentation</title>
     
     <link rel="stylesheet" href="../../_static/thetis.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../',
-        VERSION:     '0+untagged.863.gb20c529',
+        VERSION:     '0.0.5+764.g4dac05e',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -51,7 +51,7 @@
         <li class="page_item"><a href="../../funding.html" title="Our financial supporters">Funding</a></li>
         <li class="page_item"><a href="../../contact.html" title="Getting in touch">Contact</a></li>
         <li class="page_item"><a href="https://github.com/thetisproject/thetis" title="Thetis source on GitHub">GitHub</a></li>
-        <li class="page_item"><a href="https://travis-ci.org/thetisproject/thetis" title="Thetis on Travis">Travis</a></li>
+        <li class="page_item"><a href="https://jenkins.ese.ic.ac.uk:1080/blue/organizations/jenkins/thetisproject%2Fthetis/activity" title="Thetis build status">Jenkins</a></li>
       </ul>
     </div><!-- .menu -->
   </div><!-- #access -->
@@ -83,7 +83,7 @@
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Every instance is initialized with default values</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="nb">super</span><span class="p">(</span><span class="n">ModelOptions</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="n">__init__</span><span class="p">()</span>
+        <span class="nb">super</span><span class="p">(</span><span class="n">ModelOptions</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="fm">__init__</span><span class="p">()</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">order</span> <span class="o">=</span> <span class="mi">1</span>
         <span class="sd">&quot;&quot;&quot;int: Polynomial degree of elements&quot;&quot;&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">element_family</span> <span class="o">=</span> <span class="s1">&#39;rt-dg&#39;</span>
@@ -109,13 +109,13 @@
 <span class="sd">        See :class:`.ParabolicViscosity`</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">include_grad_div_viscosity_term</span> <span class="o">=</span> <span class="kc">False</span>
-        <span class="sd">r&quot;&quot;&quot;</span>
+        <span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        bool: Include :math:`\nabla (\nu_h \nabla \cdot \bar{\textbf{u}})` term in the depth-averaged viscosity</span>
 
 <span class="sd">        See :class:`.shallowwater_eq.HorizontalViscosityTerm` for details.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">include_grad_depth_viscosity_term</span> <span class="o">=</span> <span class="kc">True</span>
-        <span class="sd">r&quot;&quot;&quot;</span>
+        <span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        bool: Include :math:`\nabla H` term in the depth-averaged viscosity</span>
 
 <span class="sd">        See :class:`.shallowwater_eq.HorizontalViscosityTerm` for details.</span>
@@ -234,7 +234,7 @@
 
 <span class="sd">        Used to compute max stable advection time step.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">w_advection</span> <span class="o">=</span> <span class="n">Constant</span><span class="p">(</span><span class="mi">1</span><span class="n">e</span><span class="o">-</span><span class="mi">4</span><span class="p">)</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">w_advection</span> <span class="o">=</span> <span class="n">Constant</span><span class="p">(</span><span class="mf">1e-4</span><span class="p">)</span>
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        :class:`Constant`: Maximum vertical velocity magnitude</span>
 
@@ -298,18 +298,18 @@
         <span class="sd">&quot;&quot;&quot;int: Verbosity level&quot;&quot;&quot;</span>
         <span class="c1"># NOTE these are fields, potentially Functions: move out of this class?</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">linear_drag</span> <span class="o">=</span> <span class="kc">None</span>
-        <span class="sd">r&quot;&quot;&quot;</span>
+        <span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Coefficient or None: 2D linear drag parameter :math:`L`</span>
 
 <span class="sd">        Bottom stress is :math:`\tau_b/\rho_0 = -L \mathbf{u} H`</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">quadratic_drag</span> <span class="o">=</span> <span class="kc">None</span>
-        <span class="sd">r&quot;&quot;&quot;Coefficient or None: dimensionless 2D quadratic drag parameter :math:`C_D`</span>
+        <span class="sa">r</span><span class="sd">&quot;&quot;&quot;Coefficient or None: dimensionless 2D quadratic drag parameter :math:`C_D`</span>
 
 <span class="sd">        Bottom stress is :math:`\tau_b/\rho_0 = -C_D |\mathbf{u}|\mathbf{u}`</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">mu_manning</span> <span class="o">=</span> <span class="kc">None</span>
-        <span class="sd">r&quot;&quot;&quot;Coefficient or None: Manning-Strickler 2D quadratic drag parameter :math:`\mu`</span>
+        <span class="sa">r</span><span class="sd">&quot;&quot;&quot;Coefficient or None: Manning-Strickler 2D quadratic drag parameter :math:`\mu`</span>
 
 <span class="sd">        Bottom stress is :math:`\tau_b/\rho_0 = -g \mu^2 |\mathbf{u}|\mathbf{u}/H^{1/3}`</span>
 <span class="sd">        &quot;&quot;&quot;</span>
